--- a/src/app/client/user/user.component.html
+++ b/src/app/client/user/user.component.html
@@ -18,7 +18,7 @@
       <div>Đơn Mua</div>
     </div>
     <div
-      *ngIf="role === 'admin'"
+      *ngIf="role === 'Admin'"
       class="menu-item"
       [ngClass]="{ active: menu === 'trangquanly' }"
       (click)="hidemenu('trangquanly')"
