--- a/src/app/admin/add-kind-product/add-kind-product.component.html
+++ b/src/app/admin/add-kind-product/add-kind-product.component.html
@@ -1,4 +1,4 @@
-<div class="modal-overlay" *ngIf="isModalOpen">
+<div class="modal-overlay" >
     <div class="container">
       <h3>Thêm Loại Sản Phẩm</h3>
       <form (ngSubmit)="onSubmit()">
