--- a/src/app/admin/manager-product/manager-product.component.html
+++ b/src/app/admin/manager-product/manager-product.component.html
@@ -97,6 +97,12 @@
                   >
                     Chỉnh sửa
                   </button>
+                  <button
+                    mat-menu-item
+                    (click)="showNotification(element.idproduct)"
+                  >
+                   Xóa
+                  </button>
                 </mat-menu>
               </td>
             </ng-container>
@@ -135,3 +141,5 @@
     <app-add-product *ngIf="statusAddProduct === true"></app-add-product>
   </div>
 </div>
+<app-confirm *ngIf="notification" (closeFormEvent)="notification=false" (executeEvent)="removeProduct()"></app-confirm>
+<app-notification *ngIf="message!=''" [message]="message"></app-notification>
