--- a/src/app/components/confirm/confirm.component.css
+++ b/src/app/components/confirm/confirm.component.css
@@ -13,10 +13,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  width: 22%; height: 22%;
+  width: 20%; 
+  height: 20%;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 15px;
+  border-radius: 5px;
   position: fixed;
   z-index: 1000;
   top: 20px;
@@ -47,9 +48,9 @@
 
 .container-button button {
   width: 100px;
-  font-size: 20px;
+  font-size: 15px;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #fefefe;
   color: brown;
   box-shadow: 0px 5px 10px 2px #bdb5b5c3;
