--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
                 </div>
                 <div style="background-color: rgb(251, 251, 251);">
                     Tổng số khách hàng:
-                    <p>{{statisticalReservation?.completedInvoice}}</p>
+                    <p>{{totalCustomer}}</p>
                 </div>
                 <div style="background-color: rgb(252, 251, 251);">
                     Doanh thu đặt sân:
