--- a/src/app/client/detailproduct/detailproduct.component.html
+++ b/src/app/client/detailproduct/detailproduct.component.html
@@ -95,7 +95,7 @@
     </div>
   </div>
 </div>
-<div class="description" *ngIf="product.description" [innerHTML]="product.description"></div>
+<div *ngIf="product" class="description" [innerHTML]="product.description"></div>
 <app-preview-product [IdProduct]="productId"></app-preview-product>
 <app-footer></app-footer>
 <app-notification *ngIf="hidenotify" [message]="message"></app-notification>
