--- a/src/app/admin/invoice/invoice.component.html
+++ b/src/app/admin/invoice/invoice.component.html
@@ -1,127 +1,96 @@
 <div class="main-container">
   <div class="header">
-    <app-manager-header></app-manager-header>
+    <app-manager-header (searchTerm)="search($event)"></app-manager-header>
   </div>
   <div class="scrollable-content">
     <div class="container">
-      <div class="container-invoice">
-        <div class="table-container">
-          <table
-            id="InvoiceTable"
-            mat-table
-            [dataSource]="dataSource"
-            class="mat-elevation-z8 custom-table"
-          >
-            <!-- ID Invoice Column -->
-            <ng-container matColumnDef="Mã hóa đơn">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Mã hóa đơn
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.idInvoice }}
-              </td>
-            </ng-container>
+      <div class="table-container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table">
+          <!-- Mã hóa đơn -->
+          <ng-container matColumnDef="idInvoice">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>Mã hóa đơn</th>
+            <td class="table-cell" mat-cell *matCellDef="let element">{{ element.idInvoice }}</td>
+          </ng-container>
 
-            <!-- Customer Name Column -->
-            <ng-container matColumnDef="Mã khách hàng">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Mã khách hàng
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.idcustomer }}
-              </td>
-            </ng-container>
+          <!-- Mã khách hàng -->
+          <ng-container matColumnDef="idcustomer">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>Mã khách hàng</th>
+            <td class="table-cell" mat-cell *matCellDef="let element">
+              {{ element.idcustomer }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="customername">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>Tên khách hàng</th>
+            <td class="table-cell" mat-cell *matCellDef="let element">
+              {{ element.customername }}
+            </td>
+          </ng-container>
+          <!-- Tổng tiền -->
+          <ng-container matColumnDef="totalAmount">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>Tổng tiền</th>
+            <td class="table-cell" mat-cell *matCellDef="let element">
+              {{ element.totalamount | number : "1.0-0" }} đ
+            </td>
+          </ng-container>
 
-            <!-- Customer Phone Column -->
-            <ng-container matColumnDef="Số điện thoại">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Số điện thoại
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.customerPhone || 'N/A' }}
-              </td>
-            </ng-container>
+          <!-- Ngày đặt -->
+          <ng-container matColumnDef="reservationDate">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>Ngày đặt</th>
+            <td class="table-cell" mat-cell *matCellDef="let element">
+              {{ element.reservationdate | date : "dd/MM/yyyy" }}
+            </td>
+          </ng-container>
 
-            <!-- Total Amount Column -->
-            <ng-container matColumnDef="Tổng tiền">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Tổng tiền
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.totalamount | number:'1.0-0' }} đ
-              </td>
-            </ng-container>
+          <!-- Trạng thái -->
+          <ng-container matColumnDef="status">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>Trạng thái</th>
+            <td class="table-cell" mat-cell *matCellDef="let element">
+              {{ element.status || 'Không xác định' }}
+            </td>
+          </ng-container>
 
-            <!-- Reservation Date Column -->
-            <ng-container matColumnDef="Ngày đặt">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Ngày đặt
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.reservationdate | date:'dd/MM/yyyy' }}
-              </td>
-            </ng-container>
+          <!-- Hành động -->
+          <ng-container matColumnDef="actions">
+            <th class="table-header" mat-header-cell *matHeaderCellDef>
+              <span class="material-symbols-outlined">settings</span>
+            </th>
+            <td class="table-cell" mat-cell *matCellDef="let element">
+              <span
+                class="material-symbols-outlined"
+                style="font-size: 15px; margin-left: 8px; cursor: pointer"
+                [matMenuTriggerFor]="menu"
+              >
+                more_vert
+              </span>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item>Chi tiết</button>
+              </mat-menu>
+            </td>
+          </ng-container>
 
-            <!-- Status Column -->
-            <ng-container matColumnDef="Trạng thái">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Trạng thái
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.status || 'Không xác định' }}
-              </td>
-            </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </div>
 
-            <!-- Payment Method Column -->
-            <ng-container matColumnDef="Phương thức thanh toán">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                Phương thức thanh toán
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                {{ element.paymentMethod || 'N/A' }}
-              </td>
-            </ng-container>
+      <div class="change-page">
+        <button class="report" (click)="exportInvoiceArrayToExcel()">
+          <span class="material-symbols-outlined" > print_error </span>Xuất báo
+          cáo
+        </button>
+        <app-paging
+          [totalPages]="Math.ceil(totalInvoice / pageSize)"
+          [currentPage]="pageIndex"
+          (pageChanged)="onPageChanged($event)"
+        ></app-paging>
 
-            <!-- Actions Column -->
-            <ng-container matColumnDef="Hành động">
-              <th class="table-header" mat-header-cell *matHeaderCellDef>
-                <span class="material-symbols-outlined" style="font-size: 22px;">
-                  settings
-                </span>
-              </th>
-              <td class="table-cell" mat-cell *matCellDef="let element">
-                <span
-                  style="font-size: 15px; margin-left: 8px; cursor: pointer"
-                  [matMenuTriggerFor]="menu"
-                  class="material-symbols-outlined"
-                  >more_vert</span
-                >
-                <mat-menu #menu="matMenu">
-                  <button mat-menu-item>Chỉnh sửa</button>
-                </mat-menu>
-              </td>
-            </ng-container>
+        <div class="filter-container">
+          <label for="dateStart">Ngày bắt đầu:</label>
+          <input id="dateStart" type="date" [(ngModel)]="dateStart" />
 
-            <!-- Table Rows -->
-            <tr
-              mat-header-row
-              *matHeaderRowDef="displayedColumns"
-              class="table-header-row"
-            ></tr>
-            <tr
-              mat-row
-              *matRowDef="let row; columns: displayedColumns"
-              class="table-row"
-            ></tr>
-          </table>
-        </div>
-        <div class="change-page">
-          <button class="report">
-            <span class="material-symbols-outlined"> print_error </span>Xuất báo cáo
-          </button>
-          <button class="report">
-            <span class="material-symbols-outlined"> add </span>Thêm hóa đơn
-          </button>
+          <label for="dateEnd">Ngày kết thúc:</label>
+          <input id="dateEnd" type="date" [(ngModel)]="dateEnd" />
+          <button class="filter-button" (click)="onFilter()">Lọc</button>
         </div>
       </div>
     </div>
