--- a/src/app/client/caterogies/caterogies.component.html
+++ b/src/app/client/caterogies/caterogies.component.html
@@ -60,7 +60,7 @@
             >
           </div>
           <div class="product-rating">
-            <span class="star">★</span>4.9 Đã bán 7,3k
+            <span class="star">★</span>Free Shipping
           </div>
           <div class="product-location"></div>
         </div>
