--- a/src/app/admin/detail-product/detail-product.component.html
+++ b/src/app/admin/detail-product/detail-product.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-      <span class="material-symbols-outlined" style="cursor: pointer" [routerLink]="'menu/sanpham'">
+      <span class="material-symbols-outlined" style="cursor: pointer" (click)="closeAddproduct()">
         arrow_back
       </span>
       <a class="add-product">
